@@ -1,3 +1,9 @@
+2003-01-24  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03679] Re: cleanup for pipe
+	* etc.c (open_pipe_rw): check stdin, stdout
+	* file.c (uncompress_stream): rewrite
+
 2003-01-23  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [w3m-dev 03678] Re: config.param is clear when configure -help
